--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
         <i class="fas fa-search"></i>
         <div class="contact-header"></div>
     </header>
+    <div class="contact-us">
+        <div class="contact-headline">
+            <p>contact us</p>
+        </div>
+        <form action="" class="form-index" method="GET">   
+            <input type="text" name="subject" id="subject-input" placeholder="Subject" autocomplete="off" autofocus="off" class="input-box" required>
+            <input type="text" name="mail" id="mail-input" placeholder="E-mail" autocomplete="off" autofocus="off" class="input-box" required>
+            <input type="text" name="message" id="message-input" placeholder="Message" autocomplete="off" autofocus="off" class="input-box" required>
+            <input type="submit" value="SEND" class="submit-button" id="submit">
+        </form>
+    </div>
 </body>
 <script src="code-behind.js"></script>
 </html>
