--- a/contact-us.html
+++ b/contact-us.html
@@ -28,4 +28,5 @@
 <script src="code-behind.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js">
 </script>
+<script src="contact-form.js"></script>
 </html>
