--- a/log-in.html
+++ b/log-in.html
@@ -8,10 +8,29 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+
+<script>
+
+    function login() {
+        let email = document.getElementById('e-mail-input').value;
+      let password = document.getElementById('password-input').value;
+    firebase.auth().signInWithEmailAndPassword(email, password)
+  .then((userCredential) => {
+    // Signed in
+    var user = userCredential.user;
+    // ...
+  })
+  .catch((error) => {
+    var errorCode = error.code;
+    var errorMessage = error.message;
+    window.alert("Error : " + errorMessage);
+  });
+}
+</script>
+
 </head>
 <body>
     <header class="header-index">
@@ -23,11 +42,9 @@
             <p>create account</p>
         </div>
         <form class="form-index">
-            <input type="text" name="name" id="name-input" placeholder="Name" autocomplete="off" autofocus="off" class="input-box" required>
-            <input type="text" name="username" id="username-input" placeholder="Username" autocomplete="off" autofocus="off" class="input-box" required>
             <input type="text" name="email" id="e-mail-input" placeholder="E-mail" autocomplete="off" autofocus="off" class="input-box" required>
             <input type="password" name="password" id="password-input" placeholder="Password" autocomplete="off" autofocus="off" class="input-box" required>
-            <button class="submit-button" id="create-account" onclick="createAccount()">CREATE</button>
+            <button class="submit-button" id="create-account" onclick="login()">CREATE</button>
         </form>
     </div>
 </body>
@@ -47,19 +64,6 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   const auth = firebase.auth();
-
-
-  function createAccount(){
-      let email = document.getElementById('e-mail-input');
-      let password = document.getElementById('password-input');
-      const promise = auth.createUserWithEmailAndPassword(email.value, password.value);
-      promise.catch(e => alert(e.message));
-      alert("si");
-    }
-
-    
-</script>
 </script>
 <script src="code-behind.js"></script>
-     
 </html>
