--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
-<body>
+<body  style="background-image: url(https://miro.medium.com/max/3840/1*hRRrzQMf6owlPK1D53sVBA.png);background-size: cover;">
     <header class="header-index">
         <i class="fas fa-search"></i>
         <div class="contact-header"></div>
     </header>
-   
+  
 </body>
 <script src="code-behind.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js">
