--- a/log-in.html
+++ b/log-in.html
@@ -39,7 +39,7 @@
     </header>
     <div class="contact-us">
         <div class="contact-headline">
-            <p>create account</p>
+            <p>log in</p>
         </div>
         <form class="form-index">
             <input type="text" name="email" id="e-mail-input" placeholder="E-mail" autocomplete="off" autofocus="off" class="input-box" required>
@@ -64,6 +64,8 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   const auth = firebase.auth();
+
+
 </script>
 <script src="code-behind.js"></script>
 </html>
