--- a/contact-us.html
+++ b/contact-us.html
@@ -8,25 +8,25 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
-<body>
+<body class="body-animation">
     <header class="header-index">
         <i class="fas fa-search"></i>
         <div class="contact-header"></div>
     </header>
-    <div class="contact-us">
-        <div class="contact-headline">
-            <p>contact us</p>
+    <div class="forma-contact">
+        <div class="contact-headline hed-line">
+            <p>Contact us</p>
+            <p id="message">Feel free to send us message at any give time</p>
         </div>
-        <form class="form-index">
+        <form class="form-index form-margin">
             <input type="text" name="subject" id="subject-input" placeholder="Subject" autocomplete="off" autofocus="off" class="input-box" required>
             <input type="text" name="mail" id="mail-input" placeholder="E-mail" autocomplete="off" autofocus="off" class="input-box" required>
             <input type="text" name="message" id="message-input" placeholder="Message" autocomplete="off" autofocus="off" class="input-box" required>
-            <button class="submit-button" id="submit">SEND</button>
+            <button class="submit-button" id="submit" onclick="sendMail()">SEND</button>
         </form>
     </div>
 </body>
 <script src="code-behind.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js">
 </script>
-<script src="contact-form.js"></script>
 </html>
