--- a/create-account.html
+++ b/create-account.html
@@ -15,7 +15,6 @@
 </head>
 <body>
     <header class="header-index">
-        <i class="fas fa-search"></i>
         <div class="contact-header"></div>
     </header>
     <div class="contact-us">
@@ -30,8 +29,9 @@
             <button class="submit-button" id="create-account" onclick="createAccount()">CREATE</button>
         </form>
     </div>
+    <footer class="footer"></footer>
 </body>
-<script src="create-account-script.js"></script>
+
 <script src="code-behind.js"></script>
      
 </html>
