--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <title>Marko</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
 </head>
-<body  style="background-image: url(https://miro.medium.com/max/3840/1*hRRrzQMf6owlPK1D53sVBA.png);background-size: cover;">
+<body  style="background-image: url(https://miro.medium.com/max/3840/1*hRRrzQMf6owlPK1D53sVBA.png);background-size: cover;background-repeat: no-repeat;">
     <header class="header-index">
-        <i class="fas fa-search"></i>
+        
         <div class="contact-header"></div>
     </header>
-  
+  <footer class="footer"></footer>
 </body>
 <script src="code-behind.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js">
