--- a/contact-us.html
+++ b/contact-us.html
@@ -7,10 +7,14 @@
     <title>Marko</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
 </head>
 <body class="body-animation">
     <header class="header-index">
-        <i class="fas fa-search"></i>
         <div class="contact-header"></div>
     </header>
     <div class="forma-contact">
@@ -25,6 +29,7 @@
             <button class="submit-button" id="submit" onclick="sendMail()">SEND</button>
         </form>
     </div>
+    <footer class="footer"></footer>
 </body>
 <script src="code-behind.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js">
