--- a/log-in.html
+++ b/log-in.html
@@ -34,7 +34,6 @@
 </head>
 <body>
     <header class="header-index">
-        <i class="fas fa-search"></i>
         <div class="contact-header"></div>
     </header>
     <div class="contact-us">
@@ -47,25 +46,7 @@
             <button class="submit-button" id="create-account" onclick="login()">CREATE</button>
         </form>
     </div>
+    <footer class="footer"></footer>
 </body>
-
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyBInVpEsEvXzZtYDLy7qNA4AOIaS-5mjb8",
-    authDomain: "saveprojects-e2b7f.firebaseapp.com",
-    projectId: "saveprojects-e2b7f",
-    storageBucket: "saveprojects-e2b7f.appspot.com",
-    messagingSenderId: "1068677321956",
-    appId: "1:1068677321956:web:97a4d0b9ddeb63520588f1",
-    measurementId: "G-HXW1NYY74D"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
-
-
-</script>
 <script src="code-behind.js"></script>
 </html>
