--- a/contact-us.html
+++ b/contact-us.html
@@ -12,13 +12,16 @@
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/plugins/TextPlugin.min.js" integrity="sha256-Ejarrovr4RBRcG2RU6VSgostt/u+Og06Cm6CCrHPJMA=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous"></script>
 </head>
 <body class="body-animation">
     <header class="header-index">
         <div class="contact-header"></div>
     </header>
     <div class="forma-contact">
-        <div class="contact-headline hed-line">
+        <div class="hed-line">
+            <i class="far fa-envelope"></i>
             <p>Contact us</p>
             <p id="message">Feel free to send us message at any give time</p>
         </div>
