--- a/log-in.html
+++ b/log-in.html
@@ -45,6 +45,9 @@
             <input type="password" name="password" id="password-input" placeholder="Password" autocomplete="off" autofocus="off" class="input-box" required>
             <button class="submit-button" id="create-account" onclick="login()">CREATE</button>
         </form>
+        <div class="register-now">
+          <p>Don't have account?<span id="create-acc" onclick="createAccountPageID()">Create one</span></p>
+        </div>
     </div>
     <footer class="footer"></footer>
 </body>
