--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
 </head>
-<body  style="background-image: url(https://miro.medium.com/max/3840/1*hRRrzQMf6owlPK1D53sVBA.png);background-size: cover;background-repeat: no-repeat;">
+<body  class="index-body">
     <header class="header-index">
         
         <div class="contact-header"></div>
     </header>
+    <img src="./media/index-img.png" alt="" class="index-imagee">
+    
   <footer class="footer"></footer>
 </body>
 <script src="code-behind.js"></script>
