--- a/log-in.html
+++ b/log-in.html
@@ -6,30 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marko</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-
-<!-- The core Firebase JS SDK is always required and must be listed first -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
-
-<script>
-
-    function login() {
-        let email = document.getElementById('e-mail-input').value;
-      let password = document.getElementById('password-input').value;
-    firebase.auth().signInWithEmailAndPassword(email, password)
-  .then((userCredential) => {
-    // Signed in
-    var user = userCredential.user;
-    // ...
-  })
-  .catch((error) => {
-    var errorCode = error.code;
-    var errorMessage = error.message;
-    window.alert("Error : " + errorMessage);
-  });
-}
-</script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 </head>
 <body>
@@ -40,16 +20,17 @@
         <div class="contact-headline">
             <p>log in</p>
         </div>
-        <form class="form-index">
-            <input type="text" name="email" id="e-mail-input" placeholder="E-mail" autocomplete="off" autofocus="off" class="input-box" required>
-            <input type="password" name="password" id="password-input" placeholder="Password" autocomplete="off" autofocus="off" class="input-box" required>
-            <button class="submit-button" id="create-account" onclick="login()">CREATE</button>
-        </form>
+        <div class="form-index">
+            <input type="text" name="emadfsdfil" id="email" placeholder="E-mail" autocomplete="off" autofocus="off" class="input-box" required>
+            <input type="password" name="fvsdfsdf" id="password" placeholder="Password" autocomplete="off" autofocus="off" class="input-box" required>
+            <button class="submit-button" id="login-buttom" onclick="loghIn()">Log in</button>
+        </div><button onclick="logOut()">dfsfdsfs</button>
         <div class="register-now">
           <p>Don't have account?<span id="create-acc" onclick="createAccountPageID()">Create one</span></p>
         </div>
     </div>
     <footer class="footer"></footer>
 </body>
+
 <script src="code-behind.js"></script>
 </html>
