--- a/log-in.html
+++ b/log-in.html
@@ -22,7 +22,7 @@
         <div class="form-index">
             <input type="text" name="emadfsdfil" id="email" placeholder="E-mail" autocomplete="off" autofocus="off" class="input-box" required>
             <input type="password" name="fvsdfsdf" id="password" placeholder="Password" autocomplete="off" autofocus="off" class="input-box" required>
-            <button class="submit-button" id="login-buttom" onclick="loghIn()">Log in</button>
+            <button class="submit-button" id="login-buttom" onclick="logIn()">Log in</button>
         </div><button onclick="logOut()">dfsfdsfs</button>
         <div class="register-now">
           <p>Don't have account?<span id="create-acc" onclick="createAccountPageID()">Create one</span></p>
