--- a/log-in.html
+++ b/log-in.html
@@ -23,9 +23,11 @@
             <input type="text" name="emadfsdfil" id="email" placeholder="E-mail" autocomplete="off" autofocus="off" class="input-box" required>
             <input type="password" name="fvsdfsdf" id="password" placeholder="Password" autocomplete="off" autofocus="off" class="input-box" required>
             <button class="submit-button" id="login-buttom" onclick="logIn()">Log in</button>
-        </div><button onclick="logOut()">dfsfdsfs</button>
+        </div><button onclick="logOut()">log out</button>
         <div class="register-now">
           <p>Don't have account?<span id="create-acc" onclick="createAccountPageID()">Create one</span></p>
+          <button onclick="resetPassword()">Reset password:</button>
+          <button onclick="verifyAccount()">verify account</button>
         </div>
     </div>
     <footer class="footer"></footer>
