--- a/log-in.html
+++ b/log-in.html
@@ -27,7 +27,8 @@
         <div class="register-now">
           <p>Don't have account?<span id="create-acc" onclick="createAccountPageID()">Create one</span></p>
           <button onclick="resetPassword()">Reset password:</button>
-          <button onclick="verifyAccount()">verify account</button>
+          <button onclick="verifyAccount()">Verify account</button>
+          <button onclick="deleteAccount()">Delete account</button>
         </div>
     </div>
     <footer class="footer"></footer>
