--- a/settings.html
+++ b/settings.html
@@ -17,11 +17,30 @@
     <header class="header-index">
         
         <div class="contact-header"></div>
+        
+        <div class="user-logged-info">
+        <div id="usernamename"></div>
+        <img src="" alt="" id="img" class="proile-image">
+    </div>
     </header>
 
-    <label class="chose-file"><input type="file" class="myFile" onchange="uploadImageUser(event)"/>+</label> 
-    <input type="submit" value="vyuyui">
+<div class="body-context">
+    <div class="set-profile-iamge set-class">
+        <label class="chose-file margin-file" id="profile_image"><input type="file" class="myFile" onchange="uploadImageUser(event)"/>+</label>
+        <p for="">Set profile image</p>
+    </div>
 
+    <div class="set-profile-iamge set-class flex-down">
+        <button onclick="updateMail()" class="setting-button top-mrg">Update email</button>
+    </div>
+
+    <div class="set-profile-iamge set-class flex-down">
+        <button onclick="resetPassword()" class="setting-button top-mrg">Reset password</button>
+        <button onclick="verifyAccount()" class="setting-button">Verify account</button>
+        <button onclick="deleteAccount()" class="setting-button delete">Delete account</button>
+    </div>
+   
+</div>
     <footer class="footer"></footer>
 </body>
 <script src="code-behind.js"></script>
