--- a/create-account.html
+++ b/create-account.html
@@ -13,7 +13,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-storage.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
 </head>
-<body>
+<body   class="index-body">
     <header class="header-index">
         <div class="contact-header"></div>
     </header>
@@ -24,8 +24,7 @@
         <div class="form-index">   
             <input type="text" name="usernma" id="e-username-input" placeholder="Username" autocomplete="off" autofocus="off" class="input-box" required>
             <input type="text" name="email" id="e-mail-input" placeholder="E-mail" autocomplete="off" autofocus="off" class="input-box" required>
-            <input type="password" name="password" id="password-input" placeholder="Password" autocomplete="off" autofocus="off" class="input-box" required>
-            <label class="chose-file"><input type="file" class="myFile" onchange="uploadImage(event)"/>+</label> 
+            <input type="password" name="password" id="password-input" placeholder="Password" autocomplete="off" autofocus="off" class="input-box" required> 
             <button class="submit-button" id="create-account" onclick="createAccount()">CREATE</button>
         </div>        
     </div>
