--- a/log-in.html
+++ b/log-in.html
@@ -11,7 +11,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
-<body>
+<body  class="index-body">
     <header class="header-index">
         <div class="contact-header"></div>
     </header>
@@ -23,7 +23,7 @@
             <input type="text" name="emadfsdfil" id="email" placeholder="E-mail" autocomplete="off" autofocus="off" class="input-box" required>
             <input type="password" name="fvsdfsdf" id="password" placeholder="Password" autocomplete="off" autofocus="off" class="input-box" required>
             <button class="submit-button" id="login-buttom" onclick="logIn()">Log in</button>
-        </div><button onclick="logOut()">log out</button>
+        </div>
         <div class="register-now">
           <p>Don't have account?<span id="create-acc" onclick="createAccountPageID()">Create one</span></p>
          
