--- a/contact-us.html
+++ b/contact-us.html
@@ -23,12 +23,12 @@
             <p>Contact us</p>
             <p id="message">Feel free to send us message at any give time</p>
         </div>
-        <form class="form-index form-margin">
+        <div class="form-index form-margin">
             <input type="text" name="subject" id="subject-input" placeholder="Subject" autocomplete="off" autofocus="off" class="input-box" required>
             <input type="text" name="mail" id="mail-input" placeholder="E-mail" autocomplete="off" autofocus="off" class="input-box" required>
             <input type="text" name="message" id="message-input" placeholder="Message" autocomplete="off" autofocus="off" class="input-box" required>
             <button class="submit-button" id="submit" onclick="sendMail()">SEND</button>
-        </form>
+        </div>
     </div>
     <footer class="footer"></footer>
 </body>
