--- a/log-in.html
+++ b/log-in.html
@@ -31,6 +31,7 @@
     </div>
     <footer class="footer"></footer>
 </body>
-
 <script src="code-behind.js"></script>
+<script src="https://smtpjs.com/v3/smtp.js">
+</script>
 </html>
