--- a/settings.html
+++ b/settings.html
@@ -25,10 +25,22 @@
     </header>
 
 <div class="body-context">
-    <div class="set-profile-iamge set-class set-padding">
-        <label class="chose-file margin-file" id="profile_image"><input type="file" class="myFile" onchange="uploadImageUser(event)"/>+</label>
-        <p class="l-margin">Set profile image</p>
+
+    <div class="set-profile-iamge set-class set-padding column-gird">
+        <div class="main-content">
+            <div class="flex-style">
+                <label class="chose-file margin-file" id="profile_image"><input type="file" class="myFile hide-file" onchange="uploadImageUser(event)"/>+</label>
+                <p class="l-margin">Set profile image</p>
+            </div>
+            <button onclick="pageReloader()" class="update-button green">Update</button>
+        </div>
+
+    <div class="progress-div">
+        <progress min="0" max="100" value="0" class="progressBar"></progress>
+        <p id="percentage"></p>
     </div>
+    </div>
+
 
     <div class="set-profile-iamge set-class flex-down" onclick="showMailUpdater()">
         <button  class="setting-button top-mrg">Update email</button>   
@@ -45,6 +57,15 @@
         <button  class="setting-button top-mrg" onclick="logOut()">Log out</button>   
     </div>
    
+    <div class="set-profile-iamge set-class flex-down">
+        <button  class="setting-button top-mrg">Files</button>   
+        <button  class="setting-button top-mrg">Profile info</button> 
+    </div>
+
+    <div class="set-profile-iamge set-class flex-down" onclick="window.location.href = 'PHONELOGER.html'">
+        <button  class="setting-button top-mrg">Help</button>   
+    </div>
+
 </div>
 
 <div class="set-displ">
