--- a/settings.html
+++ b/settings.html
@@ -35,7 +35,7 @@
             <button onclick="pageReloader()" class="update-button green">Update</button>
         </div>
 
-    <div class="progress-div">
+    <div class="progress-div" id="load-animations">
         <progress min="0" max="100" value="0" class="progressBar"></progress>
         <p id="percentage"></p>
     </div>
@@ -62,7 +62,7 @@
         <button  class="setting-button top-mrg">Profile info</button> 
     </div>
 
-    <div class="set-profile-iamge set-class flex-down" onclick="window.location.href = 'PHONELOGER.html'">
+    <div class="set-profile-iamge set-class flex-down" onclick="help()">
         <button  class="setting-button top-mrg">Help</button>   
     </div>
 
