--- a/create-account.html
+++ b/create-account.html
@@ -16,6 +16,10 @@
 <body   class="index-body">
     <header class="header-index">
         <div class="contact-header"></div>
+        <div class="user-logged-info">
+            <div id="usernamename"></div>
+            <img src="" alt="" id="img" class="proile-image">
+        </div>
     </header>
     <div class="contact-us" id="create-acount-form">
         <div class="contact-headline">
@@ -25,7 +29,7 @@
             <input type="text" name="usernma" id="e-username-input" placeholder="Username" autocomplete="off" autofocus="off" class="input-box" required>
             <input type="text" name="email" id="e-mail-input" placeholder="E-mail" autocomplete="off" autofocus="off" class="input-box" required>
             <input type="password" name="password" id="password-input" placeholder="Password" autocomplete="off" autofocus="off" class="input-box" required> 
-            <button class="submit-button" id="create-account" onclick="createAccount()">CREATE</button>
+            <button class="submit-button connect-button top-create" id="create-account" onclick="createAccount()">CREATE</button>
         </div>        
     </div>
     <footer class="footer"></footer>
