--- a/settings.html
+++ b/settings.html
@@ -79,6 +79,7 @@
 </div>
 </div>
 <div class="overlay-pop-up"></div>
+<div class="hf" style="height: 50px;width: 1px;"></div>
     <footer class="footer"></footer>
 </body>
 <script src="code-behind.js"></script>
