--- a/upload.html
+++ b/upload.html
@@ -27,7 +27,7 @@
         <input type="file" id="isa" name="file-add" onchange="uploadFileToFirebase(event)" >
       </div>
      
-   
+   <div id="bodyID" style="display: flex;flex-direction: column;"></div>
 
 
     <footer class="footer"></footer>
