--- a/settings.html
+++ b/settings.html
@@ -26,7 +26,7 @@
 
 <div class="body-context">
 
-    <div class="set-profile-iamge set-class set-padding column-gird">
+    <div class="set-class set-padding column-gird">
         <div class="main-content">
             <div class="flex-style">
                 <label class="chose-file margin-file" id="profile_image"><input type="file" class="myFile hide-file" onchange="uploadImageUser(event)"/>+</label>
@@ -42,34 +42,34 @@
     </div>
 
 
-    <div class="set-profile-iamge set-class flex-down" onclick="showMailUpdater()">
+    <div class=" set-class flex-down" onclick="showMailUpdater()">
         <button  class="setting-button top-mrg">Update email</button>   
     </div>
 
-    <div class="set-profile-iamge set-class flex-down">
+    <div class="set-class flex-down">
         <button onclick="resetPassword()" class="setting-button top-mrg">Reset password</button>
         <button onclick="verifyAccount()" class="setting-button">Verify account</button>
         <button onclick="deleteAccount()" class="setting-button delete">Delete account</button>
     </div>
 
-    <div class="set-profile-iamge set-class flex-down">
+    <div class=" set-class flex-down">
         <button  class="setting-button top-mrg green" onclick="redirectLogIn()">Log in</button>   
         <button  class="setting-button top-mrg" onclick="logOut()">Log out</button>   
     </div>
    
-    <div class="set-profile-iamge set-class flex-down">
+    <div class="set-class flex-down">
         <button  class="setting-button top-mrg">Files</button>   
         <button  class="setting-button top-mrg">Profile info</button> 
     </div>
 
-    <div class="set-profile-iamge set-class flex-down" onclick="help()">
+    <div class=" set-class flex-down" onclick="help()">
         <button  class="setting-button top-mrg">Help</button>   
     </div>
 
 </div>
 
 <div class="set-displ">
-<div class="set-profile-iamge set-class popup" id="ch-mail">
+<div class=" set-class popup" id="ch-mail">
     <button class="setting-button top-mrg">Update email</button>
     <input type="text" name="newmail" id="new-mail-set"  placeholder="New password" autocomplete="off" autofocus="off" class="input-box-new">
     <div class="flex-button">
