--- a/contact-us.html
+++ b/contact-us.html
@@ -13,7 +13,15 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
 </head>
-<body class="body-animation">
+<style>
+    .body-animation,.nindex-body{
+    background: #ff00cc;  /* fallback for old browsers */
+
+background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+</style>
+<body class="nindex-body">
     <header class="header-index">
         <div class="contact-header"></div>
         <div class="user-logged-info">
