--- a/settings.html
+++ b/settings.html
@@ -21,6 +21,15 @@
         <div class="user-logged-info">
         <div id="usernamename"></div>
         <img src="" alt="" id="img" class="proile-image">
+        
+    </div>
+    <div id="new-div">
+       <div>
+        <i class="far fa-envelope txt-fnt"></i>
+       </div>
+       <div>
+        <i class="fas fa-sign-out-alt new-fnt"></i>
+       </div>
     </div>
     </header>
 
