--- a/upload.html
+++ b/upload.html
@@ -48,10 +48,12 @@
     <div id="bodyID" class="storage-posts-reference"></div> 
     <div class="hf" style="height: 50px;width: 1px;"></div>
 
-    <div class="set-displ" id="st-dis">
-        <div class=" set-class popup" id="ch-mail">
-            <button class="setting-button top-mrg delete-ex" id="delete-txt"></button>
-            <div class="flex-button">
+    <div class="set-displ" id="st-dis" style="padding: 10px;">
+        
+        <div class="set-class popup" id="ch-mail">
+            <button class="setting-button" style="padding:0px">Do you want to delete</button>
+            <div class="set-display-flex" id="delete-txt"></div>
+            <div class="flex-button new-flex-button" style="width: 100%;"> 
                 <button class="new-mail" onclick="cancleUpdateMail()">CANCLE</button>
                 <button class="new-mail" id="delete">DELETE</button>
             </div>
