--- a/contact-us.html
+++ b/contact-us.html
@@ -23,12 +23,9 @@ background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Fi
 }
 </style>
 <body class="nindex-body">
-    <header class="header-index">
-        <div class="contact-header"></div>
-        <div class="user-logged-info">
-            <div id="usernamename"></div>
-            <img src="" alt="" id="img" class="proile-image">
-        </div>
+    <header class="header-index">       
+        <p class="name-netowork"><b>Saveprojects</b></p>
+    <div class="contact-header"></div>
     </header>
     <div class="forma-contact">
         <div class="hed-line">
