--- a/index.html
+++ b/index.html
@@ -15,11 +15,47 @@
     <link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 </head>
 <body  class="index-body">
-    <header class="header-index">       
+    <header class="header-index  sticky-header">       
         <p class="name-netowork"><b>Saveprojects</b></p>
     <div class="contact-header"></div>
     </header>
-    <img src="./media/index-img.png" alt="" class="index-imagee">
+    <div id="bodyID" class="storage-posts-reference" style="margin-top: 35px;"></div> 
+    <div class="hf" style="height: 50px;width: 1px;"></div>
+
+    <div class="set-displ" id="st-dis" style="padding: 10px;">
+        
+        <div class="set-class popup" id="ch-mail">
+            <button class="setting-button" style="padding:0px">Do you want to delete</button>
+            <div class="set-display-flex" id="delete-txt"></div>
+            <div class="flex-button"> 
+                <button class="new-mail" onclick="cancleUpdateMail()">CANCLE</button>
+                <button class="new-mail" id="delete">DELETE</button>
+            </div>
+        </div>
+        </div>
+        <div class="overlay-pop-up" id="new-overlay"></div>
+
+
+         <div class="set-displ" id="previe-popup" style="padding: 10px;">
+            <div class="set-class popup" id="ch-mail">
+                <button class="setting-button" style="padding:0px" id="text-message"></button>
+                <img src="" alt="" id="preview-image">
+                <div class="set-display-flex" id="desc"></div>
+                <div class="flex-button"> 
+                    <button class="new-mail" onclick="closeImagePreview()">CLOSE</button>
+                </div>
+            </div>
+            </div>
+
+            <div class="set-displ" id="info-mail" style="padding: 10px;">
+                <div class="set-class popup" id="info-popup">
+                    <button class="setting-button" style="padding:0px">File info</button>
+                    <div class="setting-button" style="padding:0px" id="data-info"></div>
+                    <div class="flex-button"> 
+                        <button class="new-mail" onclick="closeDataInfo()">CLOSE</button>
+                    </div>
+                </div>
+                </div>
     
   <footer class="footer"></footer>
 </body>
