--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="set-class popup" id="info-popup">
                     <button class="setting-button" style="padding:0px">File info</button>
                     <div class="setting-button" style="padding:0px" id="data-info"></div>
-                    <div class="flex-button"> 
+                    <div class="flex-button" style="width: 100%;margin-right: 0px;"> 
                         <button class="new-mail" onclick="closeDataInfo()">CLOSE</button>
                     </div>
                 </div>
