--- a/create-account.html
+++ b/create-account.html
@@ -12,6 +12,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-storage.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-functions.js"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 </head>
 <body   class="index-body">
@@ -24,9 +25,9 @@
             <p>create account</p>
         </div>
         <div class="form-index">   
-            <input type="text" name="usernma" id="e-username-input" placeholder="Username" autocomplete="off" autofocus="off" class="input-box" required>
             <input type="text" name="email" id="e-mail-input" placeholder="E-mail" autocomplete="off" autofocus="off" class="input-box" required>
             <input type="password" name="password" id="password-input" placeholder="Password" autocomplete="off" autofocus="off" class="input-box" required> 
+            <input type="text" name="email" id="bio-input" placeholder="Biography" autocomplete="off" autofocus="off" class="input-box" required>
             <button class="submit-button connect-button top-create" id="create-account" onclick="createAccount()">CREATE</button>
         </div>        
     </div>
