--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <p class="name-netowork"><b>Saveprojects</b></p>
     <div class="contact-header"></div>
     </header>
+    
     <div id="bodyID" class="storage-posts-reference" style="margin-top: 35px;"></div> 
     <div class="hf" style="height: 50px;width: 1px;"></div>
 
@@ -69,7 +70,9 @@
                     </div>
     
   <footer class="footer"></footer>
-</body>
+</body>  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="code-behind.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js">
 </script>
