--- a/create-account.html
+++ b/create-account.html
@@ -33,5 +33,7 @@
     </div>
     <footer class="footer"></footer>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="code-behind.js"></script>    
 </html>
