--- a/search.html
+++ b/search.html
@@ -36,6 +36,7 @@
     <footer class="footer"></footer>
     <div idd="delete-s"></div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
 <script src="code-behind.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js">
 </script>
