--- a/settings.html
+++ b/settings.html
@@ -80,6 +80,8 @@
 <div class="hf" style="height: 50px;width: 1px;"></div>
     <footer class="footer"></footer>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="code-behind.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js">
 </script>
