--- a/upload.html
+++ b/upload.html
@@ -35,10 +35,13 @@
     </div>
     </div>
 <div id="postcontent" class="storage-posts-reference" ></div>
+<div class="mr" style="height: 55px;width: 1px;"></div>
     <footer class="footer"></footer>
 
     
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="code-behind.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js">
 </script>
