--- a/contact-us.html
+++ b/contact-us.html
@@ -41,6 +41,8 @@ background: linear-gradient(to left, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Fi
             <button class="submit-button submit-responsive" id="submit" onclick="sendMail()">SEND</button>
         </div>
     </div>
+    <div class="set-displ" id="log-out-mail" style="padding: 10px;"></div> <div class="overlay-pop-up" id="new-overlay"></div>
+
     <footer class="footer"></footer>
 
 
