--- a/create-account.html
+++ b/create-account.html
@@ -31,6 +31,18 @@
             <button class="submit-button connect-button top-create" id="create-account" onclick="createAccount()">CREATE</button>
         </div>        
     </div>
+    <div class="set-displ" id="log-out-mail" style="padding: 10px;">
+                    <div class="set-class popup" id="log-out-mailp"> 
+                        <div class="setting-button" style="width: 100%;justify-content: center;text-align: center;">Do you want to log out?</div>
+                        <div class="flex-button" style="width: 100%;margin-right: 0px;justify-content: center;">
+                            <button  onclick="logOut()"  class="new-mail" style="background-color: red;margin-right: 10px;">LOG OUT</button> 
+                            <button class="new-mail" onclick="closeLogOutPopUp()">CANCLE</button>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="set-displ" id="log-out-mail" style="padding: 10px;"></div> <div class="overlay-pop-up" id="new-overlay"></div>
+                    <div class="overlay-pop-up" id="new-overlay"></div>
+
     <footer class="footer"></footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
