--- a/search.html
+++ b/search.html
@@ -33,6 +33,8 @@
        </div>
     </div>
     </header><div id="bodyID" style="visibility: hidden;"></div>
+    <div class="set-displ" id="log-out-mail" style="padding: 10px;"></div> <div class="overlay-pop-up" id="new-overlay"></div>
+
     <footer class="footer"></footer>
     <div idd="delete-s"></div>
 </body>
