--- a/log-in.html
+++ b/log-in.html
@@ -40,6 +40,8 @@
         </div>
 
     </div>
+    <div class="set-displ" id="log-out-mail" style="padding: 10px;"></div> <div class="overlay-pop-up" id="new-overlay"></div>
+
     <footer class="footer"></footer>
 </body>
 
