--- a/settings.html
+++ b/settings.html
@@ -78,6 +78,8 @@
 
 <div class="overlay-pop-up"></div>
 <div class="hf" style="height: 50px;width: 1px;"></div>
+<div class="set-displ" id="log-out-mail" style="padding: 10px;"></div> <div class="overlay-pop-up" id="new-overlay"></div>
+
     <footer class="footer"></footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
