--- a/upload.html
+++ b/upload.html
@@ -36,6 +36,8 @@
     </div>
 <div id="postcontent" class="storage-posts-reference" ></div>
 <div class="mr" style="height: 55px;width: 1px;"></div>
+<div class="set-displ" id="log-out-mail" style="padding: 10px;"></div> <div class="overlay-pop-up" id="new-overlay"></div>
+
     <footer class="footer"></footer>
 
     
