--- a/settings.html
+++ b/settings.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,22 +24,53 @@
 
 <div class="body-context">
 
-    <div class="set-class set-padding column-gird"><div class="main-content"><div class="flex-style"><label class="chose-file margin-file" id="profile_image"><input type="file" class="myFile hide-file" onchange="uploadImageUser(event)"/>+</label><p class="l-margin">Set profile image</p></div><button onclick="pageReloader()" class="update-button green">Update</button></div>
+    <div class="set-class set-padding column-gird">
+        <div class="main-content">
+            <div class="flex-style">
+                <label class="chose-file margin-file" id="profile_image"><input type="file" class="myFile hide-file" onchange="uploadImageUser(event)"/>+</label>
+                <p class="l-margin">Set profile image</p>
+            </div>
+            <button onclick="pageReloader()" class="update-button green">Update</button>
+        </div>
 
     <div class="progress-div" id="load-animations">
-    <progress min="0" max="100" value="0" class="progressBar"></progress><p id="percentage"></p></div></div>
-    <div class=" set-class flex-down" onclick="showMailUpdater()" id="update-mail"></div>
-    <div class="set-class flex-down" id="account-settings"></div>
-    <div class=" set-class flex-down" id="log-in-out"></div>
-    <div class="set-class flex-down" id="files-buttons"></div>
-    <div class=" set-class flex-down" onclick="help()" id="help-button"></div></div>
+        <progress min="0" max="100" value="0" class="progressBar"></progress>
+        <p id="percentage"></p>
+    </div>
+    </div>
 
-<div class="set-displ"><div class=" set-class popup" id="ch-mail"></div></div>
 
+    <div class=" set-class flex-down" onclick="showMailUpdater()">
+        <button  class="setting-button top-mrg">Update email</button>   
+    </div>
+
+    <div class="set-class flex-down">
+        <button onclick="resetPassword()" class="setting-button top-mrg">Reset password</button>
+        <button onclick="verifyAccount()" class="setting-button">Verify account</button>
+        <button onclick="deleteAccount()" class="setting-button delete">Delete account</button>
+    </div>
+
+    <div class=" set-class flex-down">
+        <button  class="setting-button top-mrg green" onclick="redirectLogIn()">Log in</button>   
+        <button  class="setting-button top-mrg" onclick="logOut()">Log out</button>   
+    </div>
+   
+    <div class="set-class flex-down">
+        <button  class="setting-button top-mrg">Files</button>   
+        <button  class="setting-button top-mrg">Profile info</button> 
+    </div>
+
+    <div class=" set-class flex-down" onclick="help()">
+        <button  class="setting-button top-mrg">Help</button>   
+    </div>
+
+</div>
+
+<div class="set-displ" id="update-ml"></div>
+</div><div class="overlay-pop-up" id="new-overlay"></div>
+<div class="set-displ" id="log-out-mail" style="padding: 10px;"></div>
 <div class="overlay-pop-up"></div>
 <div class="hf" style="height: 50px;width: 1px;"></div>
-<div class="set-displ" id="log-out-mail" style="padding: 10px;"></div> <div class="overlay-pop-up" id="new-overlay"></div>
-
     <footer class="footer"></footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/0.7.19/ua-parser.min.js"></script>
